# teapot

./: .gitmodules  Cargo.toml  Makefile  README.md  docker-compose.yml
apilib/: Cargo.toml
apilib/src/: lib.rs
database/: concat.sh  init.sql  shop.sql  users.sql
dblib/: Cargo.toml
dblib/src/: lib.rs
dblib/src/shop/: address.rs  inventory.rs  mod.rs  orders.rs
dblib/src/users/: users.rs
query/: Cargo.toml
query/src/: filter.rs  lib.rs  query.rs  sort.rs  sql.rs
shop/: Cargo.toml
shop/src/: address.rs  cart.rs  inventory.rs  lib.rs  main.rs  orders.rs
towerlib/: Cargo.toml
towerlib/src/: lib.rs  logging.rs  session.rs
users/: Cargo.toml
users/src/: lib.rs  main.rs  token.rs
users/src/fixtures/: users.sql
