[workspace]
members = ["users", "shop", "dblib"]
exclude = ["database", "apispec"]

[workspace.dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.6.1", features = ["runtime-tokio-rustls", "postgres", "uuid"] }
hyper = { version = "0.14.23", features = ["server", "http1", "http2", "tcp"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.2.2", features = ["v4"] }
