[workspace]
members = ["users", "shop", "dblib", "towerlib"]
exclude = ["database", "apispec"]

[workspace.dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.6.1", features = ["runtime-tokio-rustls", "postgres", "uuid", "migrate"] }
hyper = { version = "0.14.23", features = ["server", "http1", "http2", "tcp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.89"
uuid = { version = "1.2.2", features = ["v4"] }
tower = "0.4.13"
env_logger = "0.10.0"
log = "0.4.17"
pin-project = "1.0.12"

