[package]
name = "dblib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
query = { path = "../query" }
sqlx = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
argon2 = "0.4.1"
convert_case = "0.6.0"
