[package]
name = "shop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dblib = { path = "../dblib" }
towerlib = { path = "../towerlib" }
apilib = { path = "../apilib" }
query = { path = "../query" }
tokio = { workspace = true }
hyper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
env_logger  = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
redis = { workspace = true }
