[package]
name = "towerlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { workspace = true }
tower = { workspace = true }
env_logger  = { workspace = true }
log = { workspace = true }
pin-project = { workspace = true }
rand = "0.8.5"
