[package]
name = "users"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dblib = { path = "../dblib" }
towerlib = { path = "../towerlib" }
apilib = { path = "../apilib" }
tokio = { workspace = true }
hyper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
env_logger  = { workspace = true }
log = { workspace = true }
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.6"
